--- a/xyzhang.html
+++ b/xyzhang.html
@@ -37,7 +37,7 @@
                     </p>
                     <p>Research interests: deep learning, <b>computer vision, time serise processing.</b></p>
                 </td>
-                <td width="18%"><img src="./Xinggang Wang, Professor of Huazhong University of Sci. and Tech. Research in computer vision, deep learning, &amp; artificial intelligence._files/xw22head.png" alt="Photo"></td>
+<!--                 <td width="18%"><img src="./Xinggang Wang, Professor of Huazhong University of Sci. and Tech. Research in computer vision, deep learning, &amp; artificial intelligence._files/xw22head.png" alt="Photo"></td> -->
             </tr>
         </tbody></table>
     </div>
