--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
                     </p>
                     <p>Research interests: deep learning, <b>computer vision, time serise processing.</b></p>
                 </td>
-                <td width="18%"><img src="./Xinggang Wang, Professor of Huazhong University of Sci. and Tech. Research in computer vision, deep learning, &amp; artificial intelligence._files/xw22head.png" alt="Photo"></td>
+<!--                 <td width="18%"><img src="./Xinggang Wang, Professor of Huazhong University of Sci. and Tech. Research in computer vision, deep learning, &amp; artificial intelligence._files/xw22head.png" alt="Photo"></td> -->
             </tr>
         </tbody></table>
     </div>
 
-    <p><strong>Some Highly Influential Papers</strong></p>
+    <p><strong>Papers</strong></p>
     <ul>
         <p># indicates the first author is my Ph.D./master student and * indicates the corresponding author</p>
         <li>
