--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <table width="100%" border="0">
             <tbody><tr>
                 <td width="80%">
-                    <p><strong><span lang="zh">Xinggang</span> Wang</strong></p>
+                    <p><strong><span lang="zh">Xiaoyuan</span> Zhang</strong></p>
                     <p><strong>Professor</strong></p>
                     <p>
                         <a href="https://xyzhang.github.io/">Artificial Intelligence Institute</a><br>
