--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <p><strong><span lang="zh">Xiaoyuan</span> Zhang</strong></p>
                     <p><strong>Professor</strong></p>
                     <p>
-                        <a href="https://xyzhang.github.io/">Artificial Intelligence Institute</a><br>
+                        <a href="https://xyzhang.github.io/">Artificial Intelligence Innovation Institute</a><br>
                         <a href="http://ei.hust.edu.cn/">School of Electronic Information and Communications</a><br>
                         <a href="http://www.hust.edu.cn/">Huazhong University of Science and Technology</a>
                     </p>
