--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 </head>
 <body>
 
-<div class="topnav">
+<!-- <div class="topnav">
     <div id="container">
         <a href="https://xyzhang.github.io/index_cn.htm">中文</a>
         <a href="https://xyzhang.github.io/group.htm">GROUP</a>
         <a href="https://xyzhang.github.io/pubs.htm">PUBLICATION</a>
         <a class="active" href="https://xyzhang.github.io/index.htm">HOME</a>
     </div>
-</div>
+</div> -->
 
 <div id="container">
     <div>
@@ -24,14 +24,14 @@
             <tbody><tr>
                 <td width="80%">
                     <p><strong><span lang="zh">Xiaoyuan</span> Zhang</strong></p>
-                    <p><strong>Professor</strong></p>
+                    <p><strong>M.S.Student</strong></p>
                     <p>
-                        <a href="https://xyzhang.github.io/">Artificial Intelligence Innovation Institute</a><br>
+<!--                         <a href="https://xyzhang.github.io/">Artificial Intelligence Innovation Institute</a><br> -->
                         <a href="http://ei.hust.edu.cn/">School of Electronic Information and Communications</a><br>
                         <a href="http://www.hust.edu.cn/">Huazhong University of Science and Technology</a>
                     </p>
                     <p>
-                        Email: xiaoyuanz # hust.edu.cn<br>
+                        Email: xiaoyuanz@hust.edu.cn<br>
                         Address: Room C209, East 17 Hall, Luoyu Rd 1037, Wuhan, 430074, China<br>
                         
                     </p>
@@ -44,7 +44,7 @@
 
     <p><strong>Papers</strong></p>
     <ul>
-        <p># indicates the first author is my Ph.D./master student and * indicates the corresponding author</p>
+        <p># indicates the first author * indicates the corresponding author</p>
         <li>
             <p>Xiaohu Wang; Fei Nie; Xiaoyuan Zhang#(student first author); Weibin Wang; Hengwei Lei* <a href="https://ieeexplore.ieee.org/abstract/document/10624696">Gas Concentration Prediction of Power System Based on EMA-Autoformer</a>. EPECE 2024 
         </li>
