--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <p><strong>Papers</strong></p>
     <ul>
-        <p># indicates the first author * indicates the corresponding author</p>
+        <p># indicates the first author and * indicates the corresponding author</p>
         <li>
             <p>Xiaohu Wang; Fei Nie; Xiaoyuan Zhang#(student first author); Weibin Wang; Hengwei Lei* <a href="https://ieeexplore.ieee.org/abstract/document/10624696">Gas Concentration Prediction of Power System Based on EMA-Autoformer</a>. EPECE 2024 
         </li>
