--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                     <p>Research interests: deep learning, <b>computer vision, time serise processing.</b></p>
                 </td>
 <!--                 <td width="18%"><img src="./Xinggang Wang, Professor of Huazhong University of Sci. and Tech. Research in computer vision, deep learning, &amp; artificial intelligence._files/xw22head.png" alt="Photo"></td> -->
+                <td width="18%"><img src="./xyzhang.png" alt="Photo"></td>
             </tr>
         </tbody></table>
     </div>
